[gd_scene load_steps=5 format=2]

[ext_resource path="res://systems/menus/sequences/main_sequence.gd" type="Script" id=1]
[ext_resource path="res://systems/menus/screens/TitleScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://systems/menus/screens/OptionsScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://systems/menus/screens/ChooseGamemodeScreen.tscn" type="PackedScene" id=4]

[node name="MainSequence" type="Node"]
script = ExtResource( 1 )

[node name="TitleScreen" parent="." instance=ExtResource( 2 )]

[node name="OptionsScreen" parent="." instance=ExtResource( 3 )]

[node name="ChooseGamemode" parent="." instance=ExtResource( 4 )]
[connection signal="go_to_choose_gamemode" from="TitleScreen" to="." method="go_to_choose_gamemode"]
[connection signal="go_to_options" from="TitleScreen" to="." method="go_to_options"]
[connection signal="quit" from="TitleScreen" to="." method="quit_game"]
[connection signal="go_to_title_screen" from="OptionsScreen" to="." method="go_to_title_screen"]
[connection signal="go_to_title_screen" from="ChooseGamemode" to="." method="go_to_title_screen"]
[connection signal="start_game_as_assassin" from="ChooseGamemode" to="." method="emit_signal" binds= [ "start_game_as_assassin" ]]
